--- a/urbanNestWeb/src/css/HomeLinkMainPage.css
+++ b/urbanNestWeb/src/css/HomeLinkMainPage.css
@@ -25,8 +25,8 @@
 }
 
 .hl-mainHeader-logo {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     object-fit: fill;
     padding: 9px 18px;
     margin: 0 60px 0 60px;
@@ -50,7 +50,27 @@
     width: 100%;
     height: auto;
 }
-
+.hl-mainLayout-dividerTitle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 20%;
+    z-index: 10;
+}
+.hl-mainLayout-title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 72px;
+    font-weight: 100;
+    width: 50%;
+    height: auto;
+    color: white;
+}
 .hl-mainLayout-selector {
     display: grid;
     grid-template-columns: 1fr 1fr;
