--- a/urbanNestWeb/src/css/HomeLinkMainPage.css
+++ b/urbanNestWeb/src/css/HomeLinkMainPage.css
@@ -147,7 +147,8 @@
     align-items: center;
     z-index: 10;
 }
-.hl-mainLayout-buttonSearch{
+
+.hl-mainLayout-buttonSearch {
     margin-left: 50px;
     width: 100px;
     min-height: 50px;
@@ -159,20 +160,86 @@
     background-color: #38A3A5;
     border: none;
 }
-.hl-mainLayout-BestNewBuild{
+
+.hl-mainLayout-BestNewBuild {
     display: flex;
     align-items: center;
     margin: 40px 60px 40px 60px;
     padding: 9px 18px;
     width: 100%;
-    height: auto;    
+    height: auto;
 }
-.hl-mainLayout-BestNewBuild-headerTitle{
+
+.hl-mainLayout-BestNewBuild-headerTitle {
     font-size: 35px;
     margin: 0 0 40px 0;
 }
-.hl-mainLayout-BestNewBuild-headerDescription{
+
+.hl-mainLayout-BestNewBuild-headerDescription {
     display: block;
     width: 100%;
     font-size: 25px;
+}
+
+.hl-mainLayout-BestNewBuild-showBox {
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 42px 64px;
+    gap: 30px;
+    box-sizing: border-box;
+}
+
+.hl-mainLayout-BestNewBuild-showCard {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+.hl-mainLayout-BestNewBuild-img {
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+    filter: brightness(90%);
+    border-radius: 12px 12px 0 0;
+    transition: transform 0.4s ease;
+}
+
+.hl-mainLayout-BestNewBuild-img:hover {
+    transform: scale(1.05);
+    filter: brightness(100%);
+}
+
+.hl-mainLayout-BestNewBuild-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    padding: 16px 32px;
+}
+
+.hl-mainLayout-BestNewBuild-containerTitle {
+    width: 100%;
+    height: auto;
+    padding: 4px 8px;
+    margin: 4px 8px 4px 8px;
+}
+
+.hl-mainLayout-BestNewBuild-containerText {
+    width: 100%;
+    height: auto;
+    padding: 4px 8px;
+    margin: 4px 8px 4px 8px;
+}
+.hl-mainLayout-whyHomeLinkTitle-home{
+    color: #38A3A5;
+}
+.hl-mainLayout-whyHomeLinkTitle-Link{
+    color: #EE6C4D;
 }
